--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-service",
+  "name": "mates-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -14,10 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "mig:gen": "prisma migrate dev --name",
-    "mig:run": "prisma migrate deploy",
+    "mig:run": "prisma migratae deploy",
     "mig:res": "prisma migrate reset",
     "seed": "ts-node prisma/seed.ts",
     "prisma:gen": "prisma generate",
+    "prisma:watch": "prisma generate --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,17 +27,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/federation": "^0.37.1",
+    "@apollo/subgraph": "2.2.3",
     "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.3",
+    "@nestjs/microservices": "^9.1.6",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "4.4.0",
+    "@prisma/client": "@4.8.0",
+    "amqp-connection-manager": "^4.1.9",
+    "amqplib": "^0.10.3",
     "apollo-server-express": "^3.10.3",
     "class-transformer": "^0.5.1",
     "graphql": "^16.6.0",
-    "prisma": "^4.4.0",
+    "meetings-app-lib": "../../lib/",
+    "prisma": "^4.14.0",
     "prisma-nestjs-graphql": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -46,9 +53,11 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/amqplib": "^0.10.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
+    "@types/passport": "^1.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
